--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <header class="header">
         <section class="header-notice">
             <h1>
-                <a href="https://www.npmjs.com/package/keep-random" target="_blank">keep.random</a> is now available on &nbsp;<svg viewBox="0 0 780 250"><path fill="#231F20" d="M240,250h100v-50h100V0H240V250z M340,50h50v100h-50V50z M480,0v200h100V50h50v150h50V50h50v150h50V0H480z M0,200h100V50h50v150h50V0H0V200z"></path></svg> &nbsp!
+                <a href="https://www.npmjs.com/package/keep.random" target="_blank">keep.random</a> is now available on &nbsp;<svg viewBox="0 0 780 250"><path fill="#231F20" d="M240,250h100v-50h100V0H240V250z M340,50h50v100h-50V50z M480,0v200h100V50h50v150h50V50h50v150h50V0H480z M0,200h100V50h50v150h50V0H0V200z"></path></svg> &nbsp!
             </h1>
         </section>
       <div class="container">
@@ -100,7 +100,7 @@
             Getting started
           </h2>
           <div class="code-header">
-            1. Install the client
+            Step 1. Install the package
           </div>
           <div class="example-code-item">
             <pre class="pre"><code class="bash code">
@@ -108,19 +108,19 @@ npm install keep-random
                         </code></pre>
           </div>
           <div class="code-header">
-            2. Use your favourite wallet to send tx.
+            Step 2. Use your favourite wallet to send tx.
           </div>
           <div class="example-code-item">
             <pre class="pre"><code class="typescript code">
 // import the module
-import keepRandom from 'keep-random';
+import keepRandom from 'keep.random';
 
 // send random transaction
 const randomResult = await keepRandom.sendTx(web3);
                     </code></pre>
           </div>
           <div class="code-header">
-            3. Get random result from keep.random.
+            Step 3. Get random result from keep.random.
           </div>
           <div class="example-code-item">
             <pre class="pre"><code class="typescript code">
