--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Keep.Random</title>
+    <title>keep.random</title>
+    <meta name="description" content="random tool made by keep network" />
 
     <link
       href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap"
