--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="subtitle-text-container">
           <div class="subtitle">Make random service transparent and simple.</div>
           <div class="subtitle-text">
-              Based on Keep Random Beacon, we built Keep.Random for you. This is a powerful tool that you can use to get true randomness in a trustless way and apply them to your products!
+              Based on Keep Random Beacon, we built Keep.Random for you. This is a powerful tool that you can use to get true randomness in a trustless way and apply it to your products!
             <br/>
             <br/>
           </div>
