--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>keep.random</title>
-    <meta name="description" content="random tool made by keep network" />
+    <meta name="description" content="Make random service transparent and simple." />
 
     <link
       href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap"
