--- a/index.html
+++ b/index.html
@@ -150,5 +150,15 @@ if (randomResult) {
         </div>
       </div>
     </footer>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-179112964-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-179112964-1');
+</script>
   </body>
 </html>
