--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           </div>
           <div class="example-code-item">
             <pre class="pre"><code class="bash code">
-npm install keep-random
+npm install keep.random
                         </code></pre>
           </div>
           <div class="code-header">
