add eth address

--- a/index.html
+++ b/index.html
@@ -135,14 +135,21 @@ if (randomResult) {
           </div>
         </div>
       </section>
+
+      <section class="donations">
+          <h2 class="getting-started-title">Donations</h2>
+          <div class="container">
+              <img src="img/eth.png" style="width:180px" />
+              <p>0xcB53eA7A5097742b11b4903a58E29f123Eec9aa0</p>
+          </div>
+      </section>
     </main>
+
     <footer class="footer">
       <div class="container">
         <div class="footer-bottom">
           <div class="pisa">
-            <a>
-              Built by
-            </a>
+            <a>Built by</a>
             <a href="https://github.com/laogandie-code/KeepRandom" class="pisa-name">
               laogandie
             </a>
