--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
   </head>
   <body>
     <header class="header">
-        <section class="header-notice">
+        <section class="header-notice" style="display: none">
             <h1>
-                <a href="https://www.npmjs.com/package/keep.random" target="_blank">keep.random</a> is now available on &nbsp;<svg viewBox="0 0 780 250"><path fill="#231F20" d="M240,250h100v-50h100V0H240V250z M340,50h50v100h-50V50z M480,0v200h100V50h50v150h50V50h50v150h50V0H480z M0,200h100V50h50v150h50V0H0V200z"></path></svg> &nbsp!
+                <a href="https://www.npmjs.com/package/keep.random" target="_blank">keep.random</a>
             </h1>
         </section>
       <div class="container">
         <div class="header-top">
           <div class="github-container">
-            <a href="https://github.com/laogandie-code/KeepRandom">
+            <a href="https://github.com/laogandie-code/KeepRandom" target="_blank">
               <img
                 width="32"
                 height="32"
@@ -70,14 +70,17 @@
             </a>
           </div>
         </div>
+
         <div class="main-title-container-left">
           <h1 class="main-title">
             kee<span class="last-y">p</span
             ><span class="title-dot">.</span>random
           </h1>
         </div>
+
         <div class="subtitle-text-container">
-          <div class="subtitle">Make random service transparent and simple.</div>
+          <div class="subtitle">Building amazing dApp<br/> with keep.random</div>
+          <br/>
           <div class="subtitle-text">
               Based on Keep Random Beacon, we built Keep.Random for you. This is a powerful tool that you can use to get true randomness in a trustless way and apply it to your products!
             <br/>
@@ -92,6 +95,8 @@
             </i>
           </a>
         </div>
+
+        <a class="full-demo" href="http://dapp.keeprandom.top/" target="_blank">See full dApp demo</a>
       </div>
     </header>
     <main class="main">
