--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           </a>
         </div>
 
-        <a class="full-demo" href="http://dapp.keeprandom.top/" target="_blank">See full dApp demo</a>
+        <a class="full-demo" href="https://github.com/laogandie-code/pool-together" target="_blank">See full dApp demo</a>
       </div>
     </header>
     <main class="main">
